modified index.html with some silly text

--- a/index.html
+++ b/index.html
@@ -37,10 +37,7 @@
     </div>
     <div class="section_2">
         <h2 class="third_header">Rules</h2>
-        <p>When playing with this code and styling it, try to keep with the current theme, however I do
-            understand that this will change over time. Use fonts that have been used elsewhere on the page
-            and use inkeeping colors and themes. When it comes to using HTML elements and tags, use those
-            which are new to you, or you are trying to practise with, and the same goes with CSS.</br> This
+        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil, soluta suscipit ab minima, maiores necessitatibus molestiae incidunt quod a praesentium laudantium quas, voluptatibus debitis enim. Iure fugit repellendus est ipsam?</br> This
             may seem overly simple and pointless, but to those starting out can be valuable. You can view 
             previous changes and see how people did what they did by viewing older commits. Have fun and be daring
             with your code! Learn something new every day!
